# zeroMQ-crach-with-inproc-in-dll

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
foo/: CMakeLists.txt  conanfile.txt  foo.cpp  foo.h  logger.h
include/: interface.h
include/dynalo/: dynalo.hpp  symbol_helper.hpp
include/dynalo/detail/: config.hpp
include/dynalo/detail/linux/: dynalo.hpp
include/dynalo/detail/macos/: dynalo.hpp
include/dynalo/detail/windows/: dynalo.hpp
